--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.sun.xml.stream.buffer</groupId>
     <artifactId>streambuffer</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>xmlstreambuffer</name>
     <description>Stream based representation for XML infoset</description>
@@ -77,7 +77,7 @@
         <spotbugs.version>4.3.0</spotbugs.version>
 
         <stax-ex.version>2.0.2-SNAPSHOT</stax-ex.version>
-        <activation.version>2.0.2-SNAPSHOT</activation.version>
+        <activation.version>2.1.0-RC1</activation.version>
         <junit.version>4.13.2</junit.version>
         <woodstox-core.version>6.2.6</woodstox-core.version>
 
