--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.sun.xml.stream.buffer</groupId>
     <artifactId>streambuffer</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>xmlstreambuffer</name>
     <description>Stream based representation for XML infoset</description>
@@ -76,8 +76,8 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.3.0</spotbugs.version>
 
-        <stax-ex.version>2.0.1</stax-ex.version>
-        <activation.version>2.0.1</activation.version>
+        <stax-ex.version>2.1.0-M1</stax-ex.version>
+        <activation.version>2.1.0-RC1</activation.version>
         <junit.version>4.13.2</junit.version>
         <woodstox-core.version>6.2.6</woodstox-core.version>
 
@@ -92,8 +92,8 @@
                 <version>${stax-ex.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>jakarta.activation</artifactId>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
                 <version>${activation.version}</version>
             </dependency>
             <dependency>
@@ -115,8 +115,8 @@
             <artifactId>stax-ex</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
