--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -76,7 +76,7 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.5.3.0</spotbugs.version>
 
-        <stax-ex.version>2.1.0-M2</stax-ex.version>
+        <stax-ex.version>2.1.0</stax-ex.version>
         <activation.version>2.1.0</activation.version>
         <junit.version>4.13.2</junit.version>
         <woodstox-core.version>6.2.8</woodstox-core.version>
